--- a/CollectionView-Mark/Info.plist
+++ b/CollectionView-Mark/Info.plist
@@ -20,6 +20,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>&quot;CollectionViewDemo需要始终使用您的位置&quot;</string>
 	<key>NSLocationAlwaysUsageDescription</key>
